--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         
                         <tr>
                             <td style="font-size:18px;line-height:50px">Hello
-                                <img class="wavelogo" src="https://cdn-icons.flaticon.com/png/512/2339/premium/2339864.png?token=exp=1646408562~hmac=02b3fe971fd33f1c6d6ace462f3a13d0" alt="wave">
+                                <!--<img class="wavelogo" src="https://cdn-icons.flaticon.com/png/512/2339/premium/2339864.png?token=exp=1646408562~hmac=02b3fe971fd33f1c6d6ace462f3a13d0" alt="wave"> -->
+                                <img class="wavelogo" alt="wave" src="https://img.icons8.com/emoji/48/000000/waving-hand-emoji.png"/>
+
                             </td>
                             
                         </tr>
